test/tests/stages/18_structures/invalid_parse/var_decl_missing_struct_kw.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(x)
  ;
  identifier(x)
  identifier(y)
  ;
  return
  const int(0)
  ;
  }
